<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/custom_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/release_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/placeholder_movie_item_release_year"
            android:textColor="@color/grey"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="@string/placeholder_movie_item_title" />

        <RatingBar
            android:id="@+id/vote_average"
            style="?attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:numStars="10"
            android:rating="@string/placeholder_movie_item_ratings"
            android:stepSize="0.1" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginRight="@dimen/custom_margin"
                android:layout_marginTop="@dimen/custom_margin"
                android:text="@string/label_overview"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/custom_margin"
                android:ellipsize="end"
                android:maxLines="5"
                android:textSize="16sp"
                tools:text="@string/placeholder_movie_item_overview" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginRight="@dimen/custom_margin"
                android:layout_marginTop="@dimen/custom_margin"
                android:text="@string/label_trailers"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/custom_margin"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/card_video" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginRight="@dimen/custom_margin"
                android:layout_marginTop="@dimen/custom_margin"
                android:text="@string/label_reviews"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/custom_margin"
                tools:listitem="@layout/card_review" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
