<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="160dp"
            android:layout_height="270dp"
            android:layout_marginLeft="16dp"
            tools:src="@drawable/placeholder_movie_item_poster"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/poster">

            <LinearLayout
                android:id="@+id/linearLayout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textStyle="bold"
                    tools:text="@string/placeholder_movie_item_title"/>

                <TextView
                    android:id="@+id/release_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="@string/placeholder_movie_item_release_year"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:text="@string/label_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="5"
                android:paddingTop="4dp"
                android:textSize="16sp"
                tools:text="@string/placeholder_movie_item_overview" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>